@@ -1,5 +1,5 @@
 #! /bin/sh
-# $NetBSD: test-bigfile,v 1.1.1.1.32.2 2016/12/23 07:47:40 snj Exp $
+# $NetBSD: test-bigfile,v 1.1.1.1.32.3 2017/02/12 21:59:45 snj Exp $
 
 test="$1"	# partial4000 or partial8000
 bozohttpd="$2"
@@ -7,30 +7,35 @@ wget="$3"
 datadir="$4"
 verbose="$5"
 
+tmperr="tmp.$test.err"
+
 if [ "yes" = "$verbose" ]; then
 	echo "Running test $test"
 else
-	exec 2>tmp.$test.err
+	exec 2>"$tmperr"
 fi
 
 bozotestport=11111
 
 # copy beginning file
-cp ${datadir}/bigfile.${test} ./bigfile
+cp "${datadir}/bigfile.${test}" ./bigfile
 
 # fire up bozohttpd
-${bozohttpd} -b -b -I ${bozotestport} -n -s -f ${datadir} &
+${bozohttpd} -b -b -I ${bozotestport} -n -s -f "${datadir}" &
 bozopid=$!
 
-${wget} -c http://localhost:${bozotestport}/bigfile
+"${wget}" -c http://localhost:${bozotestport}/bigfile
 
 kill -9 $bozopid
 
-if cmp ./bigfile ${datadir}/bigfile; then
+if cmp ./bigfile "${datadir}/bigfile"; then
 	rm -f ./bigfile
 	exit 0
 else
 	rm -f ./bigfile
-	[ "yes" = "$verbose" ] || echo "Failed test $test: `cat tmp.$test.err`"
+	if [ "yes" = "$verbose" ]; then
+		echo "Failed test $test:"
+		cat "$tmperr"
+	fi
 	exit 1
 fi
